--- a/nlp_task1.2.ipynb
+++ b/nlp_task1.2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -15,35 +15,35 @@
       "[STEP] Loading test data...\n",
       "[STEP] Preprocessing text...\n",
       "[STEP] Creating train/validation split...\n",
-      "Training size:   2588\n",
-      "Validation size: 648\n",
-      "Test size:       2094\n",
+      "Training size:   7747\n",
+      "Validation size: 1937\n",
+      "Test size:       3547\n",
       "\n",
       "Sample preprocessed texts:\n",
-      "2021    am interested in going out tonight. say to chi...\n",
-      "1074                              think my mum is working\n",
-      "179     oh...but yest i went out... cant meet u oso.. ...\n",
-      "619             okie... done... we shall meet 7pm at dg k\n",
-      "2143    so , we are spending a couple of months in wal...\n",
+      "1811    at_user my birthday on february. my friends th...\n",
+      "4099    who\\u2019s next then? the togo team of emmanue...\n",
+      "1353    hope kevin frandsen is taking 3rd base for the...\n",
+      "6229    rt at_user: it's kerry's birthday tonight on b...\n",
+      "7322    \"rt at_user: red sox, phillies flying high as ...\n",
       "Name: Clean_Text, dtype: object\n",
       "\n",
       "[STEP] Building WORD TF-IDF features...\n",
-      "Word feature space dimension: 2851\n",
+      "Word feature space dimension: 13906\n",
       "\n",
       "=== Majority baseline on validation set ===\n",
       "Majority label: neutral\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    negative      0.000     0.000     0.000       140\n",
-      "     neutral      0.500     1.000     0.667       324\n",
-      "    positive      0.000     0.000     0.000       184\n",
+      "    negative      0.000     0.000     0.000       292\n",
+      "     neutral      0.473     1.000     0.643       917\n",
+      "    positive      0.000     0.000     0.000       728\n",
       "\n",
-      "    accuracy                          0.500       648\n",
-      "   macro avg      0.167     0.333     0.222       648\n",
-      "weighted avg      0.250     0.500     0.333       648\n",
+      "    accuracy                          0.473      1937\n",
+      "   macro avg      0.158     0.333     0.214      1937\n",
+      "weighted avg      0.224     0.473     0.304      1937\n",
       "\n",
-      "Accuracy: 0.5\n",
-      "Macro F1: 0.2222222222222222\n",
+      "Accuracy: 0.4734124935467217\n",
+      "Macro F1: 0.2142022891847699\n",
       "\n",
       "=== Logistic Regression (WORD TF-IDF, balanced) ===\n"
      ]
@@ -62,30 +62,30 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    negative      0.481     0.543     0.510       140\n",
-      "     neutral      0.733     0.728     0.731       324\n",
-      "    positive      0.667     0.609     0.636       184\n",
+      "    negative      0.450     0.514     0.480       292\n",
+      "     neutral      0.683     0.697     0.690       917\n",
+      "    positive      0.694     0.637     0.664       728\n",
       "\n",
-      "    accuracy                          0.654       648\n",
-      "   macro avg      0.627     0.627     0.626       648\n",
-      "weighted avg      0.660     0.654     0.656       648\n",
+      "    accuracy                          0.647      1937\n",
+      "   macro avg      0.609     0.616     0.611      1937\n",
+      "weighted avg      0.652     0.647     0.649      1937\n",
       "\n",
-      "Accuracy: 0.6543\n",
-      "Macro F1: 0.6257\n",
+      "Accuracy: 0.6469\n",
+      "Macro F1: 0.6114\n",
       "\n",
       "=== Linear SVM (WORD TF-IDF, balanced) ===\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    negative      0.533     0.514     0.524       140\n",
-      "     neutral      0.729     0.772     0.750       324\n",
-      "    positive      0.676     0.625     0.650       184\n",
+      "    negative      0.502     0.397     0.444       292\n",
+      "     neutral      0.659     0.721     0.689       917\n",
+      "    positive      0.669     0.646     0.657       728\n",
       "\n",
-      "    accuracy                          0.674       648\n",
-      "   macro avg      0.646     0.637     0.641       648\n",
-      "weighted avg      0.672     0.674     0.672       648\n",
+      "    accuracy                          0.644      1937\n",
+      "   macro avg      0.610     0.588     0.596      1937\n",
+      "weighted avg      0.639     0.644     0.640      1937\n",
       "\n",
-      "Accuracy: 0.6744\n",
-      "Macro F1: 0.6410\n",
+      "Accuracy: 0.6438\n",
+      "Macro F1: 0.5963\n",
       "\n",
       "[STEP] Building CHAR TF-IDF features...\n",
       "Char feature space dimension: 30000\n",
@@ -93,20 +93,20 @@
       "=== Linear SVM (CHAR TF-IDF, balanced) ===\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    negative      0.560     0.536     0.547       140\n",
-      "     neutral      0.731     0.781     0.755       324\n",
-      "    positive      0.667     0.609     0.636       184\n",
+      "    negative      0.512     0.445     0.476       292\n",
+      "     neutral      0.692     0.736     0.714       917\n",
+      "    positive      0.698     0.679     0.688       728\n",
       "\n",
-      "    accuracy                          0.679       648\n",
-      "   macro avg      0.653     0.642     0.646       648\n",
-      "weighted avg      0.676     0.679     0.677       648\n",
+      "    accuracy                          0.671      1937\n",
+      "   macro avg      0.634     0.620     0.626      1937\n",
+      "weighted avg      0.667     0.671     0.668      1937\n",
       "\n",
-      "Accuracy: 0.6790\n",
-      "Macro F1: 0.6463\n",
+      "Accuracy: 0.6706\n",
+      "Macro F1: 0.6259\n",
       "\n",
       "========== SUMMARY OF FEATURE SETS (Validation) ==========\n",
-      "WORD TF-IDF  (SVM):  Acc=0.6744, Macro F1=0.6410\n",
-      "CHAR TF-IDF  (SVM):  Acc=0.6790, Macro F1=0.6463\n",
+      "WORD TF-IDF  (SVM):  Acc=0.6438, Macro F1=0.5963\n",
+      "CHAR TF-IDF  (SVM):  Acc=0.6706, Macro F1=0.6259\n",
       "\n",
       "[INFO] Best feature setup on validation: CHAR TF-IDF\n",
       "\n",
@@ -115,16 +115,16 @@
       "=== Final Test Set Performance (Best Feature Setup: CHAR TF-IDF) ===\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    negative      0.997     1.000     0.999       394\n",
-      "     neutral      0.999     0.997     0.998      1208\n",
-      "    positive      0.994     0.998     0.996       492\n",
+      "    negative      0.584     0.460     0.515       559\n",
+      "     neutral      0.642     0.787     0.707      1513\n",
+      "    positive      0.754     0.641     0.693      1475\n",
       "\n",
-      "    accuracy                          0.998      2094\n",
-      "   macro avg      0.997     0.998     0.998      2094\n",
-      "weighted avg      0.998     0.998     0.998      2094\n",
+      "    accuracy                          0.675      3547\n",
+      "   macro avg      0.660     0.629     0.638      3547\n",
+      "weighted avg      0.680     0.675     0.671      3547\n",
       "\n",
-      "Test accuracy: 0.9976122254059216\n",
-      "Test macro F1: 0.9975345561126123\n",
+      "Test accuracy: 0.6746546377220186\n",
+      "Test macro F1: 0.6382931561873787\n",
       "\n",
       "[STEP] Saving best model and vectorizer...\n",
       "Saved as 'cw1_best_svm_char_tfidf.joblib' and 'cw1_best_vectorizer_char_tfidf.joblib'.\n"
@@ -133,7 +133,7 @@
    ],
    "source": [
     "\"\"\"\n",
-    "7120CEM CW1 - Machine Learning Solution for Sentiment Analysis\n",
+    " Machine Learning Solution for Sentiment Analysis\n",
     "\n",
     "This version includes TWO feature setups:\n",
     "    - Setup A: Word-level TF-IDF (unigrams + bigrams)\n",
@@ -164,12 +164,11 @@
     "\n",
     "# Use the files that actually contain TEXT\n",
     "TRAIN_FILES = [\n",
-    "    \"sms-2013test-A.tsv\",\n",
-    "    \"livejournal-2014test-A.tsv\",\n",
+    "    \"twitter-2013train-A.txt\",\n",
     "]\n",
     "\n",
     "# For simplicity, we also evaluate on the SMS set as \"test\"\n",
-    "TEST_FILE = \"sms-2013test-A.tsv\"\n",
+    "TEST_FILE = \"twitter-2013test-A.txt\"\n",
     "\n",
     "DEFAULT_SEP = \"\\t\"\n",
     "\n",
